--- a/IOSBoilerplate/LotteryListTableCell.xib
+++ b/IOSBoilerplate/LotteryListTableCell.xib
@@ -45,7 +45,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 15}, {58, 58}}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="423163013"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">294</int>
 								<string key="NSFrame">{{76, 23}, {130, 21}}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="75978157"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -95,7 +93,6 @@
 								<int key="NSvFlags">294</int>
 								<string key="NSFrame">{{188, 23}, {107, 21}}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="256664353"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -127,7 +124,6 @@
 								<int key="NSvFlags">294</int>
 								<string key="NSFrame">{{76, 52}, {214, 21}}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -154,7 +150,6 @@
 								<int key="NSvFlags">297</int>
 								<string key="NSFrame">{{301, 36}, {12, 16}}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="206582617"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -171,7 +166,6 @@
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{250, 4}, {66, 14}}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="269602860"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -188,7 +182,6 @@
 								<int key="NSvFlags">256</int>
 								<string key="NSFrameSize">{320, 1}</string>
 								<reference key="NSSuperview" ref="224497313"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="47597731"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -203,7 +196,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 87}</string>
 						<reference key="NSSuperview" ref="908880257"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="365233192"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -219,7 +211,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 88}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="224497313"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -367,55 +358,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">LotteryListTableCell</string>
-					<string key="superclassName">PRPNibBasedTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="adLabel">UILabel</string>
-						<string key="countdownForCurrentIssueToEnd">UILabel</string>
-						<string key="iconImageView">UIImageView</string>
-						<string key="lotterySaleStatusImageView">UIImageView</string>
-						<string key="nameLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="adLabel">
-							<string key="name">adLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="countdownForCurrentIssueToEnd">
-							<string key="name">countdownForCurrentIssueToEnd</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="iconImageView">
-							<string key="name">iconImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="lotterySaleStatusImageView">
-							<string key="name">lotterySaleStatusImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nameLabel">
-							<string key="name">nameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/LotteryListTableCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PRPNibBasedTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PRPNibBasedTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
